# practical_cpp

book-shop-management/: CMakeLists.txt  README.md
book-shop-management/database-table/: README,.md  book.sql  employees.sql  members.sql  purchases.sql  sales.sql  suppliers.sql
book-shop-management/include/: books.h  books_management.h  employees.h  members.h  purchases.h  sales.h  suppliers.h
book-shop-management/src/: books.cpp  employees.cpp  main.cpp  members.cpp  purchases.cpp  sales.cpp  suppliers.cpp
